[r=ricgard,rvb][bug=][author=ricgard] Backport revision 4054: Applied changes to actions; zone placement, add mac button, consistent button sizes, feedback spacing.

--- a/src/maasserver/static/scss/maas/components/_button.scss
+++ b/src/maasserver/static/scss/maas/components/_button.scss
@@ -67,6 +67,7 @@ form button[type='submit'],
 form input[type='submit'] {
     font-size: 1em;
     border: none;
+    max-height: 37px;
 
     &[disabled],
     &.disabled {
